added merchant dashboard
